# Algorythms

./: CMakeLists.txt  README.md  main.cpp  mystd.h
Divide and Conquer/: MaxSubarray.h
LongArithmetics/: LongInt.cpp  LongInt.h
Sortings/: BinarySearch.h  InsertionSort.cpp  InsertionSort.h  MergeSort.h
Tasks/: 2_3_7.h
